video ratio, Quiz Title width is showing wrongly (on Firefox) issue resolved

--- a/assets/scss/front/course-spotlight/_sidebar.scss
+++ b/assets/scss/front/course-spotlight/_sidebar.scss
@@ -162,7 +162,7 @@
 									font-size: 18px;
 								}
 								.lesson_title {
-									max-width: 220px;
+									// max-width: 220px;
 									margin-top: -2px;
 									&:first-letter {
 										text-transform: capitalize;
